feat: add db controller, route and swag
